--- a/index.html
+++ b/index.html
@@ -123,23 +123,30 @@
                                         <ul class="list-group text-left" id="myMenu">
                                             <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
-                                            <li data-menuanchor="services" class="list-group-item"><a href="#services">Services</a></li> -->
+                                            <li data-menuanchor="resume" class="list-group-item"><a href="#resume">Resume</a></li> 
                                             <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-                                            <li data-menuanchor="client" class="list-group-item"><a href="#testimonial">Client</a></li> -->
-                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
+                                            <li data-menuanchor="research" class="list-group-item"><a href="#research">Research</a></li> -->
+                                            <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
-                                            <li class="list-group-item"><span>Contact Info :</span></li>
-                                            <li class="list-group-item"><span><i class="lni-map-marker"></i> Univeristy of Miami, Florida, USA</span></li>
+                                            <!-- <li class="list-group-item"><span>Contact Info :</span></li>
+                                            <li class="list-group-item"><span><i class="lni-map-marker"></i> Univerty of Miami, Florida, USA</span></li> -->
                                             <!-- <li class="list-group-item"><span><i class="lni-phone-handset"></i> +1 212-695-1962</span></li> -->
                                             <!-- <li class="list-group-item"><span><i class="lni-envelope"></i> nill@retrina.com</span></li> -->
                                             <li class="list-group-item"><span>Follow me :</span></li>
                                             <li class="list-group-item">
                                                 <ul class="list-inline socails">
-                                                <li class="list-inline-item"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                           <!--      <li class="list-inline-item"><a href="#"><i class="lni-facebook-filled"></i></a></li>
                                                 <li class="list-inline-item"><a href="#"><i class="lni-twitter-filled"></i></a></li>
                                                 <li class="list-inline-item"><a href="#"><i class="lni-github-original"></i></a></li>
-                                                <li class="list-inline-item"><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                                <li class="list-inline-item"><a href="#"><i class="lni-linkedin-original"></i></a></li> -->
+                                                <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original text-dark"><span class="base-color"></span></span></i></a></li>
+                                                <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube text-dark"></i></i></a></li> 
+                                                <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled text-dark"></i></a></li>
+                                                <!-- <li class="list-inline-item"><a href="javascript:void(0);">
+                                                    <i class="lni-github-original text-dark"></i></a></li> -->
+                                                
+                                                <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original text-dark"></i></a></li>
                                             </ul>
                                             </li>
                                         </ul>
