--- a/index.html
+++ b/index.html
@@ -637,15 +637,15 @@
                                             <img src="assets\img\IMG_4813.JPG" alt="/">
                                             <div class="img-overlay text-center">
                                                 <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
+                                                   <!--  <div class="portfolio-icon">
                                                         <!--<button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                             <i class="lni-link"></i>
                                                         </button>-->
-                                                        <a href="assets\img\hawaii.jpg" class="js-zoom-gallery">
+                                                        <!--<a href="assets\img\hawaii.jpg" class="js-zoom-gallery">
                                                             <i class="lni-search"></i>
                                                         </a>
                                                     </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                                    <h5 class="text-white mt-3 mb-0">My Work</h5> -->
                                                 </div>
                                             </div>
                                         </div>
