--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                             
                                             <li data-menuanchor="research" class="list-group-item"><a href="#Research">Research</a></li> 
                                             <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-                                            <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
+                                            <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> ---<
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <!-- <li class="list-group-item"><span>Contact Info :</span></li>
@@ -589,224 +589,7 @@
              <!--   Services End   -->
 
              <!--  Portfolio Start  -->
-             <section id="portfolio" class="section pp-scrollable portfolio" data-navigation-color="#fff" data-navigation-tooltip="PORTFOLIO">
-                    <div class="display-table">
-                        <div class="display-content">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="title-small">
-                                        <p class="text-dark mb-2"><span class="base-color">Portfolio</span></p>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <div class="text-left">
-                                            <h2 class="text-dark"> <span class="base-color">Portfolio</span></h2>
-                                            <p class="text-muted mx-auto section-subtitle mt-3"></p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row mt-4">
-                                    <!--   Portfolio Filters   -->
-                                    <ul id="portfolio-filter" class="list-unstyled list-inline mb-0 col-lg-12 text-left portfolio-filter">
-                                        <li class="list-inline-item">
-                                            <a href="#" data-filter="*" class="active my-1">All</a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                           <a href="#" data-filter=".webdesign" class="my-1">Lab</a>
-                                       </li>
-                                        <li class="list-inline-item">
-                                            <a href="#" data-filter=".webdesign" class="my-1">Field Experiments</a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#" data-filter=".mobiledesign" class="my-1">Internships</a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                           <a href="#" data-filter=".graphic" class="my-1">Programming</a>
-                                       </li>
-                                        <li class="list-inline-item">
-                                            <a href="#" data-filter=".seo" class="my-1">Social Media</a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#" data-filter=".graphic" class="my-1">Side Projects</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="portfolio-items mt-4 row">
-                                    <!-- Item 01 -->
-                                    <div class="col-lg-4 portfolio-item my-3 seo">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="assets\img\IMG_4813.JPG" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <!--<button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>-->
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 02 -->
-                                    <div class="col-lg-4 portfolio-item my-3 graphic">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 03 -->
-                                    <div class="col-lg-4 portfolio-item my-3 webdesign graphic">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 04 -->
-                                    <div class="col-lg-4 portfolio-item my-3 webdesign">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 05 -->
-                                    <div class="col-lg-4 portfolio-item my-3 mobiledesign seo">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 06 -->
-                                    <div class="col-lg-4 portfolio-item my-3 webdesign seo">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 07 -->
-                                    <div class="col-lg-4 portfolio-item my-3 mobiledesign">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 08 -->
-                                    <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Item 09 -->
-                                    <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
-                                        <div class="portfolio-item-content rounded">
-                                            <img src="http://placehold.it/600x450" alt="/">
-                                            <div class="img-overlay text-center">
-                                                <div class="img-overlay-content">
-                                                    <div class="portfolio-icon">
-                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                            <i class="lni-link"></i>
-                                                        </button>
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                            <i class="lni-search"></i>
-                                                        </a>
-                                                    </div>
-                                                    <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+             
              <!--   Portfolio End   -->
 
              <!-- Testimonial Start -->
