--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                                             <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
                                             <li data-menuanchor="resume" class="list-group-item"><a href="#Resume">Resume</a></li> 
-                                            
-                                            <li data-menuanchor="research" class="list-group-item"><a href="#Research">Research</a></li> 
+                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
+                                            <li data-menuanchor="research" class="list-group-item"><a href="#Research">Research</a></li> -->
                                             <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
@@ -142,11 +142,11 @@
                                                 <li class="list-inline-item"><a href="#"><i class="lni-linkedin-original"></i></a></li> -->
                                                 <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original "></i></a></li>
                                                 <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube"></i></a></li> 
-                                                <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled "></i></a></li>
+                                                <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled text-dark"></i></a></li>
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);">
                                                     <i class="lni-github-original text-dark"></i></a></li> -->
                                                 
-                                                <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original"></i></a></li>
+                                                <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original text-dark"></i></a></li>
                                             </ul>
                                             </li>
                                         </ul>
