--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Samantha Ballard" />
 
         <!--  FavIcon  -->
-        <link rel="shortcut icon" href="http://placehold.it/60x60">
+        <link rel="shortcut icon" href="assets\img\logo.png">
 
         <!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Muli:400,600" rel="stylesheet">
@@ -530,7 +530,7 @@
 
              <!--  Portfolio Start  -->
              
-<section id="portfolio" class="section pp-scrollable portfolio" data-navigation-color="#fff" data-navigation-tooltip="PORTFOLIO">
+<section id="portfolio" class="section pp-scrollable portfolio" data-navigation-color="#fff" data-navigation-tooltip="PORTFOLIO/BLOG">
         <div class="display-table">
             <div class="display-content">
                 <div class="container">
@@ -540,7 +540,7 @@
                         </div>
                         <div class="col-lg-12">
                             <div class="text-left">
-                                <h2 class="text-dark"> <span class="base-color">Portfolio Blog</span></h2>
+                                <h2 class="text-dark"> <span class="base-color">Portfolio/Blog</span></h2>
                                 <p class="text-muted mx-auto section-subtitle mt-3"></p>
                             </div>
                         </div>
